--- a/frontend/style.css
+++ b/frontend/style.css
@@ -6,17 +6,17 @@
     box-sizing: border-box;
     font-family: 'Barlow Condensed', sans-serif;
 }
-
+html body{
+    background: var(--color-space-ocean);
+}
 nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: rosybrown;
 }
 
 .Logo{
-    color: pink;
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
@@ -31,11 +31,11 @@ nav{
     list-style: none;
 }
 .nav-links a{
-    color: pink;
     text-decoration: none;
     letter-spacing: 2px;
     font-weight: bold;
     font-size: 14px;
+    color: black;
 }
 
 .burger{
@@ -46,7 +46,7 @@ nav{
 .burger div{
     width: 25px;
     height: 3px;
-    background-color: white;
+    background: var(--color-space-princesse);
     margin: 5px;
     transition: all 0.3s ease;
 }
@@ -74,7 +74,45 @@ nav ul input{
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
-
+.content h1{
+    font-size: 60px;
+    font-weight: 100;
+    margin-top: 24px;
+    margin-bottom: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: var(--color-space-princesse);
+}
+.content{
+    margin-left: 10%;
+    margin-top: 10%;
+}
+.content .sign{
+    display: inline-block;
+    border-radius: 6px;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    text-decoration: none;
+    color: #ffff;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    background: linear-gradient(45deg, #87adfe,#ff77CD);
+}
+.content p{
+    font-size: 20px;
+}
+.poney-icon{
+    height: 70%;
+    position: absolute;
+    top: 25%;
+    left: 55%;
+    transition: transform 0.5s;
+}
+.poney-icon:hover{
+    transform: translate(-10px);
+}
 @media screen and (max-width:768px){
     body{
         overflow-x: hidden;
@@ -84,8 +122,8 @@ nav ul input{
         right: 0px;
         height: 92vh;
         top: 8vh;
-        background-color: rosybrown;
         display: flex;
+        background: var(--color-space-princesse);
         flex-direction: column;
         align-items: center;
         width: 50%;
@@ -97,6 +135,12 @@ nav ul input{
     }
     .burger{
         display: block;
+    }
+    .poney-icon{
+        position: absolute;
+        left: 9%;
+        top: 60%;
+        z-index: -1;
     }
 
 }
