--- a/frontend/inscription.css
+++ b/frontend/inscription.css
@@ -14,7 +14,6 @@ html body{
 	display: flex;
 	flex-direction: column;
 	width: 400px;
-	height: 520px;
 	background-color: var(--color-space-princesse);
 	align-items: center;
 	border-radius: 10px;
@@ -29,21 +28,21 @@ html body{
 }
 .form h1{
 	font-size: 2.2rem;
-	margin: 20px;
-	text-transform: uppercase;
+    margin: 20px;
+    text-transform: uppercase;
     color: var(--color-space-cadet);
     font-weight: bold;
 }
 
 /* les input box*/
-.box{
+.boxe{
 	padding: 12px;
 	margin: 15px;
 	width: 65%;
 	border: none;
 	border-radius: 20px;
 }
-.submit{
+.submit1{
 	padding: 12px;
 	border-radius: 20px;
 	width: 50%;
