--- a/frontend/style.css
+++ b/frontend/style.css
@@ -174,3 +174,93 @@ nav ul input{
 .toggle .line3{
     transform: rotate(45deg) translate(-5px,-6px);
 }
+#block{
+    margin: 20px 40px;
+    position: relative;
+    top: calc(100px + 50vh);
+}
+.head{
+    font-size: 40px;
+    color: var(--color-space-princesse);
+}
+.head span{
+    font-size: 30px;
+}
+.profiles{
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 80px;
+}
+
+.profile{
+    flex-basis: 260px;
+}
+.profile .profile-img{
+    height: 200px;
+    width: 200px;
+    filter: grayscale(100%);
+    cursor: pointer;
+    transition: 400ms;
+} 
+.profile:hover .profile-img{
+    filter: grayscale(0);
+}
+.user{
+    margin-top: 30px;
+    font-size: 35px;
+    letter-spacing: 3px;
+    color: var(--color-space-princesse);
+    font-weight: bold;
+}
+.profile h5 {
+    font-size: 18px;
+    font-weight: 100;
+    letter-spacing: 3px;
+    font-weight: bold;
+}
+
+.profile p{
+    font-size: 16px;
+    margin-top: 20px;
+    text-align: justify;
+}
+@media screen and (max-width: 1024px) {
+    .profiles {
+      flex-direction: column;
+    }
+  
+    .profile {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .profile p {
+      text-align: center;
+      margin: 20px 60px 80px 60px;
+      font-size: 20px;
+    }
+    .block{
+        position: relative;
+        top: calc(100px + 98vh);
+    }
+  }
+  
+  @media screen and (max-width: 900px) {
+    .heading {
+      font-size: 40px;
+      text-align: center;
+    }
+  
+    .head span {
+      font-size: 15px;
+    }
+  
+    .profiles {
+      margin: 20px 0;
+    }
+  
+    .profile p {
+      margin: 20px 10px 80px 10px;
+    }
+  }
