--- a/frontend/style.css
+++ b/frontend/style.css
@@ -264,3 +264,32 @@ nav ul input{
       margin: 20px 10px 80px 10px;
     }
   }
+  footer p{
+    padding:0;
+    font-size: 0.8em;
+    margin: 1em 0;
+    font-size: 1rem;
+}
+footer ul{
+    list-style: none;
+    display: flex;
+    margin: 1em 0; 
+}
+footer ul li a{
+    padding: 1em; 
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    transition: 100ms;
+}
+
+footer{
+    position: relative;
+    top: calc(100px + 98vh);
+    width: 100%;
+    background: var(--color-space-princesse);
+    color:var(--color-space-cadet); 
+    display: grid;
+    place-items: center;
+    padding: 2em; 
+    font-size: 1.2rem;
+}
