--- a/frontend/inscription.css
+++ b/frontend/inscription.css
@@ -11,22 +11,24 @@ html body{
 	
 }
 .form{
-	display: flex;
-	flex-direction: column;
-	width: 400px;
 	background-color: var(--color-space-princesse);
 	align-items: center;
+	width: 50%;
 	border-radius: 10px;
-	margin: auto;
 	margin-top: 100px;
+	margin-left: 25%;
 }
 
 .form img{
+	position: relative;
+	left: 43%;
 	height: 75px;
 	width: 75px;
 	margin-top:-35px;
 }
 .form h1{
+	position: relative;
+	text-align: center;
 	font-size: 2.2rem;
     margin: 20px;
     text-transform: uppercase;
@@ -34,18 +36,33 @@ html body{
     font-weight: bold;
 }
 
-/* les input box*/
-.boxe{
+.contact-form{
+  display: flex;
+}
+
+.inputs ,.input2{
+  display: flex;
+  flex-direction: column;
+  margin-right: 5%;
+}
+.inputs,
+.input2{
+	margin: 10px 0;
+	border-bottom: 2px;
 	padding: 12px;
-	margin: 15px;
-	width: 65%;
-	border: none;
-	border-radius: 20px;
+	width: 100%;
+}
+
+.inputs .input
+{
+  margin: 10px 0;
+  border-bottom: 2px;
+  padding: 12px;
+  width: 100%;
 }
 .submit1{
 	padding: 12px;
 	border-radius: 20px;
-	width: 50%;
 	margin: 10px;
 	font-size: 1rem;
 	font-weight: bolder;
@@ -53,17 +70,15 @@ html body{
 	background: linear-gradient(45deg, #87adfe,#ff77CD);
 	color: #ffff;
 }
+.boxe{
+	padding: 12px;
+	margin: 15px;
+	border: none;
+	border-radius: 20px;
+}
 #submit:hover{
 	cursor: pointer;
 	color: var(--color-space-cadet);
 }
-/* le mot de passe zappé*/
-.form a{
-	text-decoration: none;
-	color: var(--color-space-cadet);
-	font-weight: bolder;
-}
 
-.form a:hover{
-	color: var(--color-space-cadet);
-}
+
