connexion php fini

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -137,10 +137,7 @@ nav ul input{
         display: block;
     }
     .poney-icon{
-        position: absolute;
-        left: 9%;
-        top: 60%;
-        z-index: -1;
+        display: none;
     }
 
 }
