--- a/frontend/css/inscription.css
+++ b/frontend/css/inscription.css
@@ -1,3 +1,5 @@
+/* on passe au formulaire d'inscription */
+
 .form{
 	background-color: var(--color-space-princesse);
 	align-items: center;
@@ -6,14 +8,16 @@
 	margin-top: 100px;
 	margin-left: 25%;
 }
-
+/* toujours la meme chose pour l'image*/
 .form img{
 	position: relative;
 	left: 43%;
 	height: 75px;
 	width: 75px;
 	margin-top:-35px;
+	z-index: 1;
 }
+/* la meme chose que pour le titre Inscription*/
 .form h1{
 	position: relative;
 	text-align: center;
@@ -23,11 +27,11 @@
     color: var(--color-space-cadet);
     font-weight: bold;
 }
-
+/* le formulaire en flex*/
 .contact-form{
   display: flex;
 }
-
+/* une partie des input donc la partie droite*/
 .inputs ,.input2{
   display: flex;
   flex-direction: column;
@@ -40,7 +44,7 @@
 	padding: 12px;
 	width: 100%;
 }
-
+/*la partie gauche*/
 .inputs .input
 {
   margin: 10px 0;
@@ -48,6 +52,7 @@
   padding: 12px;
   width: 100%;
 }
+/* le boutton "suivant"*/
 .submit1{
 	padding: 12px;
 	border-radius: 20px;
@@ -56,18 +61,21 @@
 	font-weight: bolder;
 	border: none;
 	background: linear-gradient(45deg, #87adfe,#ff77CD);
-	color: #ffff;
+	color:var(--color-space-cadet);
 }
+/* la class des inputs pour le décorer*/  
 .boxe{
 	padding: 12px;
 	margin: 15px;
 	border: none;
 	border-radius: 20px;
 }
+/* toujours quelque chose de léger pour le button*/
 #submit:hover{
 	cursor: pointer;
 	color: var(--color-space-cadet);
 }
+/* responsive en petit écran du formulaire qui se met en colone*/
 @media screen and (max-width: 765px){
 	.contact-form{
 	  flex-direction: column;
