--- a/frontend/css/profile.css
+++ b/frontend/css/profile.css
@@ -1,63 +1,65 @@
-
+/* le contenant de la carte profile en flex */
 .card-contenaire{ 
     justify-content: center;
     align-items: center;
     display: flex;
 }
+/* le button profile en dessus de la photo */
 .submit1{
-    position: relative;
-    left: 22%;
-    padding: 12px;
+  position: relative;
+  left: 22%;
+  padding: 12px;
 	border-radius: 20px;
 	margin: 10px;
 	font-size: 1rem;
 	font-weight: bolder;
 	border: none;
 	background: linear-gradient(45deg, #87adfe,#ff77CD);
-	color: #ffff;
+	color:var(--color-space-cadet);
 }
-  .card{
-    font-family: "Candara", sans-serif;
-    width: 340px;
-    overflow: hidden;
-    background-color:var(--color-space-princesse);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
+/* le gabarit de la carte profile*/
+.card{
+  width: 340px;
+  overflow: hidden;
+  background-color:var(--color-space-princesse);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
   }
-  
-  .card-image img{
-    width: 100%;
-    height: 160px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    object-fit: cover;
+/* l'image "feuille" en photo de couverture*/
+.card-image img{
+  width: 100%;
+  height: 160px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  object-fit: cover;
   }
-  
-  .profile-image img{
-    z-index: 1;
-    width: 120px;
-    height: 120px;
-    position: relative;
-    margin-top: -75px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 100px;
-    border: 10px solid #fff;
-  } 
+/* image photo de profile */   
+.profile-image img{
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  position: relative;
+  margin-top: -75px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 100px;
+  border: 10px solid #fff;
+  }
+  /*le titre h3 donc "eve jourdan"*/
   .card-content h3{
     font-size: 25px;
     text-align: center;
     margin: 0;
   }
-  
+  /* la petite description*/
   .card-content p{
     font-size: 16px;
     text-align: justify;
     padding: 0 20px 5px 20px;
   }
-  
+  /* les 3 interet de fin de la carte profil*/
   .interet{
     text-align: center;
     padding-top: 5px;
